--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
 *-blx.bib
 *.aux
 *.bbl
+*.bcf
 *.blg
 *.fdb_latexmk
+*.fls
 *.log
 *.out
-thesis.pdf
+*.pdf
 *.run.xml
 *.synctex.gz
 *.toc
-*.bcf
+
+thesis.pdf
+pieces/*.pdf
